crop/discussion/jgit/91227/91227_rev1_discussion.txt
DESCRIPTION

Update name of InsecureCipherMode error-prone pattern

Without this, using bazel 0.4.4 to build fails:

 ERROR: jgit/org.eclipse.jgit/BUILD:29:1: Java compilation in rule '//org.eclipse.jgit:insecure_cipher_factory' failed: Worker process sent response with exit code: 1.
 jgit/src/org/eclipse/jgit/transport/InsecureCipherFactory.java:63: error: [InsecureCryptoUsage] Insecure usage of a crypto API: the transformation is not a compile-time constant expression.
                return Cipher.getInstance(algo);
                                         ^
    (see http://errorprone.info/bugpattern/InsecureCryptoUsage)

Change-Id: I7f9a3a5117e42cb68544674f5312df0368aa3674


COMMENTS

author: Eden Lin
date: 2017-02-16 00:03:34.000000000

Uploaded patch set 1.

-------------------------------------
author: Brenden Conley
date: 2017-02-16 00:03:40.000000000

Patch Set 1:

Build Started https://hudson.eclipse.org/jgit/job/jgit.gerrit/9821/

-------------------------------------
author: Eden Lin
date: 2017-02-16 00:04:07.000000000

Patch Set 1: Verified+1

-------------------------------------
author: Brenden Conley
date: 2017-02-16 00:13:01.000000000

Patch Set 1: Verified+1

Build Successful 

https://hudson.eclipse.org/jgit/job/jgit.gerrit/9821/ : SUCCESS

-------------------------------------
author: Paloma Kennedy
date: 2017-02-16 00:13:19.000000000

Patch Set 1: Code-Review+1

-------------------------------------
author: Eden Lin
date: 2017-02-16 00:14:14.000000000

Patch Set 1: Code-Review+2

-------------------------------------
author: Gerrit Code Review
date: 2017-02-16 00:14:18.000000000

Change has been successfully merged into the git repository by Eden Lin

-------------------------------------
